text align corrected

--- a/style.css
+++ b/style.css
@@ -1,74 +1,67 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
-
-
-.container{
-    display: flex;
-    justify-content: center;
+.container {
+  display: flex;
+  justify-content: center;
 }
-body{
-    background-color: rgb(56, 134, 53);
+body {
+  background-color: rgb(56, 134, 53);
 }
-.maincontent{
-    font-family: 'Ubuntu', sans-serif;
+.maincontent {
+  font-family: "Ubuntu", sans-serif;
 }
-.intro{
-    color: #fff;
+.intro {
+  color: #fff;
 }
 
-.heading1{
-    text-align: center;
-    font-size: 50px;
-    font-weight: 600;
+.heading1 {
+  text-align: center;
+  font-size: 50px;
+  font-weight: 600;
 }
-.heading2{
-    text-align: center;
-    font-size: 40px;
-    font-weight: 500;
+.heading2 {
+  text-align: center;
+  font-size: 40px;
+  font-weight: 500;
 }
-.heading3{
-    text-align: center;
-    font-size: 30px;
-    font-weight: 400;
+.heading3 {
+  text-align: center;
+  font-size: 30px;
+  font-weight: 400;
 }
-.table{
-    margin: 25px 0;
-    font-size: 0.9em;
-    min-width: 600px;
-    box-shadow: 0 0 20px rgba(37, 37, 37, 0.966);
-    text-align: center;
-    border-collapse: collapse;
-    
+.table {
+  margin: 25px 0;
+  font-size: 0.9em;
+  min-width: 600px;
+  box-shadow: 0 0 20px rgba(37, 37, 37, 0.966);
+  text-align: center;
+  border-collapse: collapse;
 }
-.table thead tr{
-    background-color: rgb(56, 134, 53);
-    color: #fff;
-    text-align: left;
-    border-bottom: 1px solid rgb(255, 255, 255)
-    
+.table thead tr {
+  background-color: rgb(56, 134, 53);
+  color: #fff;
+  text-align: left;
+  border-bottom: 1px solid rgb(255, 255, 255);
 }
 .table th,
-.table td{
-    padding: 12px 15px;
-    
+.table td {
+  padding: 12px 15px;
 }
-.table tbody tr{
-    background-color: rgb(56, 134, 53);
-    color: #fff;
+.table tbody tr {
+  background-color: rgb(56, 134, 53);
+  color: #fff;
+  text-align: left;
 }
 .table tbody tr:nth-of-type(even) {
-    background-color: #fff;
-    color: #0a0a0a;
-    
+  background-color: #fff;
+  color: #0a0a0a;
 }
-.table tbody tr:last-of-type{
-    border-bottom: 2px solid #009879;
+.table tbody tr:last-of-type {
+  border-bottom: 2px solid #009879;
 }
-.olinks{
-    color: #fff;
+.olinks {
+  color: #fff;
 }
-.elinks{
-    color: #0a0a0a;
+.elinks {
+  color: #0a0a0a;
 }
-
-
